<resources>
    <string name="app_name">Tic-Tac-Toe-Game</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_game">New Game</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="tic_tac_toe_logo">tic tac toe logo</string>
    <string name="player_or_score">Player or score</string>
    <string name="two_player_mode">Two player mode</string>
    <string name="reset_scores">Reset scores</string>
    <string name="reset">Reset</string>
    <string name="player_bot"><![CDATA[Player & Bot]]></string>
    <string name="player_player"><![CDATA[Player & Player]]></string>
    <string name="player_mode">Player mode</string>
</resources>